--- a/JiaoBaoYun-hb/html/mine/edit-info.html
+++ b/JiaoBaoYun-hb/html/mine/edit-info.html
@@ -75,6 +75,11 @@
 						if(events.limitInput(inText.value, 20)) {
 							return;
 						}
+						var reg=/^[a-zA-Z][a-zA-Z0-9]*$/
+						if(!reg.exec(inText.value)){
+							mui.toast("必须以字母开头，由数字和字母组成！")
+							return;
+						}
 						break;
 					default:
 						break;
