--- a/JiaoBaoYun-hb/html/mine/qun_manage_invite_a.html
+++ b/JiaoBaoYun-hb/html/mine/qun_manage_invite_a.html
@@ -203,7 +203,7 @@
 			<h1 class="mui-title">
 			<div id="inputArea" class="mui-input-row">
 				<label id="label_search">搜索</label>
-				<input id="input_search" type="text" class="mui-input-clear" maxlength="20" placeholder="请输入账号或手机号">
+				<input id="input_search" type="text" onkeyup="value=value.replace(/[\W]/g,'')" class="mui-input-clear" maxlength="20" placeholder="请输入账号或手机号">
 			</div>
 		</h1>
 		</header>
@@ -493,13 +493,17 @@
 					mui.toast('搜索最多20字');
 				} else {
 					var wd = events.showWaiting();
-					var vtp = 'nm';
-					var phoneReg = /^(((13[0-9]{1})|(15[0-9]{1})|(18[0-9]{1}))+\d{8})$/; //手机号
-					var emailReg = /^[a-zA-Z0-9_-]+@[a-zA-Z0-9_-]+(\.[a-zA-Z0-9_-]+)+$/; //邮箱
-					if(phoneReg.test(input_search.value)) {
-						vtp = 'mb';
-					} else if(emailReg.test(input_search.value)) {
-						vtp = 'em';
+					var vtp = 'mb';
+					//var phoneReg = /^1[34578]\d{9}$/; //手机号
+					//var emailReg = /^[a-zA-Z0-9_-]+@[a-zA-Z0-9_-]+(\.[a-zA-Z0-9_-]+)+$/; //邮箱
+					//if(!phoneReg.test(input_search.value)) {
+					//	vtp = 'nm';
+					//}
+					//else if(emailReg.test(input_search.value)) {
+					//	vtp = 'em';
+					//}
+					if(input_search.value.search(/[a-zA-Z]+/) != -1) {
+						vtp = 'nm';//有英文
 					}
 					//11.通过用户账号和手机号搜索用户
 					//需要参数
