调整资料切换类型的显示

--- a/JiaoBaoYun-hb/html/mine/qun_data_create.html
+++ b/JiaoBaoYun-hb/html/mine/qun_data_create.html
@@ -297,8 +297,8 @@
 				<ul class="mui-table-view" style="background: white;text-align: center;">
 					<li class="mui-table-view-cell" style="padding-left: 0px;padding-right: 0px;text-align: center;">
 						<div class="mui-input-row mui-checkbox mui-left">
-							<div id="type_popover" style="line-height: 40px; font-size: 15px;text-align: center;margin-left: 28px;">老师</div>
-							<input id="cb_popover" name="Checkbox2" type="checkbox">
+							<div id="type_popover" style="line-height: 40px; font-size: 15px;text-align: center;margin-left: 28px;margin-top: 1px;">老师</div>
+							<input id="cb_popover" name="Checkbox2" type="checkbox" style="line-height: 40px;top: 0px;margin-top: 1px;">
 						</div>
 					</li>
 				</ul>
