调整云存储顶部导航色值

--- a/JiaoBaoYun-hb/html/cloud/storage_main.html
+++ b/JiaoBaoYun-hb/html/cloud/storage_main.html
@@ -281,7 +281,7 @@
 	</head>
 
 	<body>
-		<header class="mui-bar mui-bar-nav">
+		<header class="mui-bar mui-bar-nav" style="background: #13b7f6;">
 			<a id="back" class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<div id="title" class="mui-title common-color-white" style="text-align: left;"></div>
 			<div id="cancel" class="title-text-pull-right">取消</div>
