--- a/JiaoBaoYun-hb/html/quan/class-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/class-dynamic.html
@@ -20,7 +20,7 @@
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">班级动态</h1>
 			<!--发布公共样式按钮-->
-			<a id="publish" class="mui-icon mui-pull-right mui-plus-visible" style="padding-left: 30px;padding-top: 15px;font-size: 16px;">发布</a>
+			<a id="publish" class="mui-icon mui-pull-right " style="padding-left: 30px;padding-top: 15px;font-size: 14px;">发布</a>
 		</header>
 		<div class="mui-content">
 			<!--<div class="input-content">-->
