--- a/JiaoBaoYun-hb/html/quan/pub-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/pub-dynamic.html
@@ -364,7 +364,7 @@
 						if(pageFlag == 'jxq') {
 							events.fireToPageNone('zonep_sub.html', 'refreshZonep');
 						} else {
-							events.fireToPageNone('../show/show-home1.html', 'infoChanged');
+							events.fireToPageNone('../show/show-home1.html', 'updatesShow');
 						}
 
 						mui.back();
