--- a/JiaoBaoYun-hb/html/show/show-home1.html
+++ b/JiaoBaoYun-hb/html/show/show-home1.html
@@ -41,7 +41,7 @@
 					<div class="mui-scroll-wrapper">
 						<div class="mui-scroll">
 							<div class="show-list">
-								
+
 							</div>
 						</div>
 					</div>
@@ -97,6 +97,13 @@
 					document.getElementById("show-all").showCity.pageIndex = 1;
 					show_listnew.getShowList(document.getElementById("show-all").showCity, document.getElementById("show-all").querySelector(".show-list"), show_listnew.setShowList)
 					getFocusedPerson(toggleAttendedPart);
+				})
+				window.addEventListener("updatesShow", function() {
+					var freshConatiner=document.getElementById("show-all");
+					var ul = freshConatiner.querySelector('.show-list');
+					freshConatiner.showCity.pageIndex = 1;
+					console.log("获取的fresh:" + JSON.stringify(freshConatiner.info))
+					show_listnew.getShowList(freshConatiner.showCity, ul, show_listnew.setShowList);
 				})
 			});
 			//滑动监听方法
