--- a/JiaoBaoYun-hb/html/mine/ReadQRCode.html
+++ b/JiaoBaoYun-hb/html/mine/ReadQRCode.html
@@ -15,9 +15,9 @@
 			<a class="mui-action-back mui-icon mui-icon-left-nav mui-pull-left"></a>
 			<h1 class="mui-title">扫描二维码</h1>
 		</header>
-		<div class="mui-content">
-			<div id="bcid" style="position: absolute;top: 44px;left: 0px;bottom: 0px;right: 0px;"></div>
-		</div>
+
+		<div id="bcid" style="position: absolute;top: 44px;left: 0px;width: 100%;height: 100%;"></div>
+
 		<script src="../../js/mui.min.js"></script>
 		<script src="../../js/publicProtocol.js" type="text/javascript" charset="utf-8"></script>
 		<script src="../../js/utils/events.js" type="text/javascript" charset="utf-8"></script>
@@ -35,7 +35,7 @@
 				gnote: ''
 			}; //扫描到的数据，组成model
 			mui.plusReady(function() {
-				startRecognize();
+				setTimeout(startRecognize,500);
 			});
 			// 条码识别成功事件
 			function onmarked(type, result) {
