--- a/JiaoBaoYun-hb/html/homework/homework-tea.html
+++ b/JiaoBaoYun-hb/html/homework/homework-tea.html
@@ -135,20 +135,9 @@
 			<div class="mui-scroll-wrapper mui-fullscreen">
 				<div class="mui-scroll vertical-scroll">
 					<ul id="list-container" class="mui-table-view">
-						<li class="mui-table-view-cell submitOnline">
-							<a>
-								<div class="stuHomework-header"><span class=" iconfont subject-icon icon-yuwen"></span>
-									<div class="header-words stuHead-words">
-										<h6 class="header-title single-line">语文作业</h6>
-										<p class="header-content single-line">凤飞 飞 好刚刚给 好刚刚给
-										</p><p class="publisher-container single-line">发布人 : 5551</p></div><div class="img-container"></div></div></a>
-									</div><img></div>
-							</a>
-
-						</li>
 					</ul>
 				</div>
-				<div class="noDataDisplay" style="background-color: white; width: 100%;min-height: 100%; text-align: center;display: none;">
+				<div class="noDataDisplay" style="position: fixed; top: 85px;left: 0;bottom: 0; background-color: white; width: 100%;height: 100%; text-align: center;display: none;">
 					<img src="../../image/qiuzhi/qiuzhi_noanswer.png" style="width: 50%; margin: 25% 0 15px;" />
 					<p style="font-size: 1.6rem;">暂无作业~~</p>
 				</div>
