--- a/JiaoBaoYun-hb/html/register/login.html
+++ b/JiaoBaoYun-hb/html/register/login.html
@@ -112,11 +112,16 @@
 			.row1:after {
 				background-color: #e4e4e4;
 			}
-			
-			input::-webkit-input-placeholder {
-				color: #808080;
+			.mui-input-group .mui-input-row{
+				height: 45px;
 			}
-			
+			input::-webkit-input-placeholder {
+				color: #999999;
+			}
+			input[type=tel],
+			input[type=password]{
+				height: 45px;
+			}
 			.regesterAndForget {
 				color: #00A5E0;
 				font-size: 1.2em;
