--- a/JiaoBaoYun-hb/html/register/yanZhengMa.html
+++ b/JiaoBaoYun-hb/html/register/yanZhengMa.html
@@ -23,6 +23,24 @@
 			.row1:after {
 				background-color: #e4e4e4;
 			}
+			.mui-input-group .mui-input-row{
+				height: 45px;
+			}
+			.mui-input-row label {
+				width: auto;
+			}
+			.mui-input-row label~input{
+				width: 75%;
+			}
+			input::-webkit-input-placeholder{
+				color: #909090;
+			}
+			input[type=tel]{
+				height: 45px;
+			}
+			.mui-input-row label{
+				padding: 15px;
+			}
 		</style>
 	</head>
 
