更改个人空间的 通知id

--- a/JiaoBaoYun-hb/html/quan/pub-dynamic.html
+++ b/JiaoBaoYun-hb/html/quan/pub-dynamic.html
@@ -368,7 +368,7 @@
 
 						textView.value = '';
 						if(pageFlag == 'jxq') {
-							events.fireToPageNone('zonep_sub.html', 'refreshZonep');
+							events.fireToPageNone('zone_main.html', 'refreshZonep');
 						} else {
 							events.fireToPageNone('../show/show-home1.html', 'updatesShow');
 						}
